# Inspection

./: .gitignore  Batching.py  Makefile  README.md  inference_latest.py  inferencedashboard.py  main.py  pyproject.toml  requirements.txt  venv_create.bat
Dataset_Conversion/: yolo-to-coco.py
config/: settings.py
core/: camera.py  fps.py  recorder.py
detection/: __init__.py  filter.py  parser.py  visualizer.py
docs/: README.md  architecture.md
src/: max_fps.py
tests/: test_camera_core.py  test_utils.py
upload/: __init__.py  api_client.py  batcher.py  deduplicator.py  pipeline.py  s3_uploader.py
utils/: __init__.py  directories.py  logger.py  validators.py
